<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/list_item_visit_group_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/BigWhiteTextStyle"
        android:layout_marginStart="@dimen/list_item_left_margin"
        android:layout_marginLeft="@dimen/list_item_left_margin"
        android:gravity="center_vertical"
        tools:text="@string/dates_visited"/>

    <ImageView
        android:id="@+id/list_item_visit_group_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/baseline_arrow_drop_down_white_24"
        android:layout_gravity="center_vertical|end"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:contentDescription="@string/desc_down_arrow" />

</FrameLayout>