...
            android:layout_height="wrap_content"
            tools:layout="@layout/places_autocomplete_fragment" />

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_places"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_places_label"
        app:layout_constraintBottom_toTopOf="@+id/adView" />
...
